spacing fixed

--- a/src/css/Team.css
+++ b/src/css/Team.css
@@ -1,25 +1,27 @@
 .team {
-    background-color: #435560;
+    background-color: #5b8a72;
     color: white;
-
-    
+    padding: 2rem 5rem;
 }
 
 .team-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-
+    justify-content: space-evenly;
+    align-content: space-evenly;
+    margin-top: 3rem;
 }
 
-.team-itemm {
-    border: 5px solid purple;
+.team-item {
+    border: 2px solid purple;
+    margin-bottom: 3rem;
+
 }
 
 .member-container {
     display: flex;
     border: 5px solid green;
-    align-items: center;
 }
 
 .member-item {
